added contact us,ai solutions,training and certifications frontend

--- a/newspage.html
+++ b/newspage.html
@@ -64,7 +64,7 @@
     </main>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            const apiKey = '7a979daa77fb46bc9d491ff9b756e497'; // Replace with your NewsAPI key
+            const apiKey = '7a979daa77fb46bc9d491ff9b756e497'; 
             const newsFeed = document.getElementById('news-feed');
 
             // Fetch news articles related to risk management
